# podcast-ai-cohost

./: .gitignore  .railwayignore  PLAN.md  RAILWAY_DEPLOYMENT.md  README.md  docker-compose.yml  export_transcripts.py  run_dev.sh
backend/: .env.sample  Dockerfile  export_segments.py  pyproject.toml  railway.toml  test_animate.py  test_segmentation.py
backend/app/: admin.py  celery_app.py  main.py
backend/app/api/: deps.py  schemas.py
backend/app/api/routes/: audio.py  episodes.py  generate.py  search.py  segments.py  sources.py  video.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/lib/: animate.py  audio.py  llm.py  pdf.py  token_counter.py  video.py  web.py
backend/migrations/: env.py
backend/migrations/versions/: add_raw_video_path_to_segments.py  add_source_segment_type.py  cd137dd563a7_add_video_path_to_segments.py
frontend/: .env.sample  Dockerfile  package.json  railway.toml  start-tunnel.js
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/components/: AudioPlayer.js  AudioRecorder.js  EditDialog.js  EpisodeEditor.js  EpisodeSources.js  EpisodeWaveform.js  LiveVideoPreview.js  LoginDialog.js  NotesEditor.js  SegmentItem.js  SortableSegmentItem.js  SourceContentDialog.js  TextEditor.js  VideoPlayer.js  VideoRecorder.js  WaveformPlayer.js
frontend/src/contexts/: AuthContext.js
frontend/src/hooks/: useAudioRecorder.js  useVideoRecorder.js
frontend/src/pages/: EpisodeList.js  Research.js  Search.js
frontend/src/services/: api.js
frontend/src/utils/: audio.js
